# fastapi_vod

./: main.py  pyproject.toml
.github/workflows/: ci.yml
